--- a/core/app/views/admin/trackers/_form.html.erb
+++ b/core/app/views/admin/trackers/_form.html.erb
@@ -1,7 +1,11 @@
 <table>
 	<tr>
-    <td><label><%=t("google_analytics_id")%></label></td>
+    <td><label><%=t("analytics_id")%></label></td>
     <td><%= text_field :tracker, :analytics_id, {"style" => "width:200px"} %></td>
+  </tr>
+	<tr>
+    <td><label><%=t("analytics_type")%></label></td>
+    <td><%= collection_select :tracker, :analytics_type, Tracker.analytics_types, :first, :last %></td>
   </tr>
   <tr>
     <td><label><%=t("environment")%></label></td>
