--- a/core/app/views/shared/_analytics.html.erb
+++ b/core/app/views/shared/_analytics.html.erb
@@ -37,3 +37,13 @@
 
   <% end %>
 <% end %>
+
+<% if yandex_trackers = trackers["yandex_metric"] %>
+  <!-- Yandex.Metrika counter -->
+  <% for tracker in yandex_trackers %>
+  <div style="display:none;"><script type="text/javascript">(function(w, c) {(w[c] = w[c] || []).push(function() {try {w.yaCounter<%= tracker.analytics_id %> = new Ya.Metrika({id:<%= tracker.analytics_id %>, enableAll: true, webvisor:true});}catch(e) { }});})(window, "yandex_metrika_callbacks");</script></div>
+  <noscript><div><img src="//mc.yandex.ru/watch/<%= tracker.analytics_id %>" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <% end %>
+  <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+  <!-- /Yandex.Metrika counter -->
+<% end %>
